frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skills-frontend
spec:
  replicas: 2  # Número de réplicas del frontend
  selector:
    matchLabels:
      app: skills-frontend
  template:
    metadata:
      labels:
        app: skills-frontend
    spec:
      containers:
      - name: skills-frontend
        image: mariopl25/skills-frontend:latest
        ports:
        - containerPort: 4200
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
