backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skills-backend
spec:
  selector:
    app: skills-backend
  ports:
  - protocol: TCP
    port: 8080  # Puerto del servicio
    targetPort: 8080  # Puerto del contenedor
  type: ClusterIP
