db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skills-db
spec:
  selector:
    app: skills-db
  ports:
    - protocol: TCP
      port: 3306  # Puerto del servicio
      targetPort: 3306  # Puerto del contenedor
  type: ClusterIP
