frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skills-frontend
spec:
  selector:
    app: skills-frontend
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  # type: ClusterIP
  type: NodePort
